--- a/src/App.css
+++ b/src/App.css
@@ -220,18 +220,15 @@ background-color: #f5f5f5;
     border-top-right-radius: .25rem !important;
 }
 
-/*.list-group-horizontal .list-group-item:first-child {*/
-/*    border-bottom-right-radius: 0;*/
-/*}*/
-
-/*.list-group-horizontal .list-group-item:last-child {*/
-/*    border-top-left-radius: 0;*/
-/*}*/
-
-/*.list-group-horizontal .list-group-item:not(:last-child):not(:first-child) {*/
-/*    border-radius: 0;*/
-/*}*/
-
 .no-radius {
     border-radius: 0 !important;
+}
+
+.border-dark {
+    border-width: 2px !important;
+    border-color: black;
+}
+
+.border-danger {
+    border-width: 4px !important;
 }
