--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,6 @@
 }
 
 .bg-image{
-    background-image: url('wp2748622-paper-wallpaper.jpg');
     height: complex;
 }
 
@@ -72,6 +71,8 @@ background: linear-gradient(90deg, rgba(177,177,177,1) 0%, rgba(204,204,204,0.87
 
 .btn{
     border-radius: 5px;
+    white-space:normal !important;
+    word-wrap:break-word;
 }
 
 .btn-val{
@@ -249,4 +250,17 @@ background-color: #f5f5f5;
 
 .border-grey{
     border-color: black;
+}
+
+.dropdown-menu-custom{
+    max-height: 250px;
+    overflow-y: auto;
+}
+
+/*.btn-long{*/
+/*    min-width: 150px;*/
+/*}*/
+
+.text-custom{
+    text-align: center !important;
 }
