--- a/src/App.css
+++ b/src/App.css
@@ -212,6 +212,10 @@ background-color: #f5f5f5;
     border-radius: 0;
 }
 
+.list-group-item-rounded {
+    border-radius: 0;
+}
+
 .list-group-item-custom:first-child {
     border-bottom-left-radius: .25rem !important;
     border-top-left-radius: .25rem !important;
@@ -220,6 +224,16 @@ background-color: #f5f5f5;
 .list-group-item-custom:last-child {
     border-bottom-right-radius: .25rem !important;
     border-top-right-radius: .25rem !important;
+}
+
+.list-group-item-rounded:first-child {
+    border-top-left-radius: 1rem !important;
+    border-top-right-radius: 1rem !important;
+}
+
+.list-group-item-rounded:last-child {
+    border-bottom-right-radius: 1rem !important;
+    border-bottom-left-radius: 1rem !important;
 }
 
 .no-radius {
@@ -264,4 +278,8 @@ background-color: #f5f5f5;
 
 .text-custom{
     text-align: center !important;
+}
+
+.custom-scanner{
+    width: 450px
 }
