--- a/src/App.css
+++ b/src/App.css
@@ -263,6 +263,10 @@ background-color: #f5f5f5;
     border-top-right-radius : 0 !important;
 }
 
+.rounded-sm {
+    border-bottom-left-radius: 5px !important;
+}
+
 .border-grey{
     border-color: black;
 }
