--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -176,6 +176,12 @@ background-color: #f5f5f5;
     margin-left : 0;
 }
 
+@media (max-width: 479px) {
+    .content-page {
+        padding: 120px 0 0;
+    }
+}
+
 .navbar-brand{
     font-size: xx-large;
 }
