--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -33,6 +33,15 @@
     text-align: center;
 }
 
+.btn-circle.btn-vsm {
+    width: 40px;
+    height: 40px;
+    padding: 5px 10px;
+    border-radius: 20px;
+    font-size: 17px;
+    text-align: center;
+}
+
 .bg-image{
     height: complex;
 }
@@ -256,6 +265,11 @@ background-color: #f5f5f5;
     border-color: black;
 }
 
+.border-dark-big {
+    border-width: 4px !important;
+    border-color: black;
+}
+
 
 
 .border-danger {
@@ -338,4 +352,39 @@ background-color: #f5f5f5;
 
 .custom-shadow-bottom{
     box-shadow: 0 8px 12px -12px gray;
+}
+
+.border-success{
+    border-color: #28a745 !important;
+}
+
+.initial-avatar {
+    /* Center the content */
+    align-items: center;
+    display: flex;
+    justify-content: center;
+
+    /*!* Colors *!*/
+    /*background-color: #d1d5db;*/
+    /*color: #fff;*/
+    font-size: large;
+
+    /* Rounded border */
+    border-radius: 50%;
+    height: 3rem;
+    width: 3rem;
+}
+
+.custom-icon:before {
+    position: relative;
+    padding-top: 3rem;
+}
+
+.nav-link-color {
+    color: rgba(0, 0, 0, .5);
+}
+
+.small-icon {
+    width: 200px;
+    height: 100px;
 }
