--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Lato');
 
+/*Contain all the custom css used in the project*/
 
 .App {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
